CHANGE ensure links in message about 'this is one of your submissions' are visible

--- a/includes/assets/css/studiorum-lectio-front-end-styles.css
+++ b/includes/assets/css/studiorum-lectio-front-end-styles.css
@@ -138,7 +138,8 @@ div.mce-toolbar-grp > div{
 		background: RGB(0, 33, 69);
 	}
 
-	.notice.dark p{
+	.notice.dark p,
+	.notice.dark a{
 		color: white;
 	}
 
